fixing dark mode on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,9 +4,14 @@ body {
   /* font-family: 'Roboto', sans-serif; */
   font-family: 'Roboto Slab', serif;
   /* font-family: 'Work Sans', sans-serif; */
-  min-height: 100vh;
-  min-width: 100vh;
-  position: absolute;
+  min-width: fit-content;
+  height: auto;
+  overflow-y: scroll;
+  word-break: break-word;
+  @media only screen and (max-width: 768px) {
+    /* position: absolute; */
+    width: 100vh;
+  }
 }
 
 a {
